[package]
name = "parrit"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio-macros = "=2.4.0"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.17", features = ["derive"] }
